--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
-    "lint": "eslint"
+    "lint": "eslint",
+    "watch": "npx tailwindcss -i ./src/theme/input.css -o ./src/output.css --watch"
   },
   "dependencies": {
     "@capacitor/app": "6.0.2",
@@ -18,14 +19,15 @@
     "@capacitor/keyboard": "6.0.3",
     "@capacitor/status-bar": "6.0.2",
     "@ionic/react": "^8.0.0",
-    "@ionic/react-router": "^8.0.0",
+    "@ionic/react-router": "5",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "classnames": "^2.5.1",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router": "5",
+    "react-router-dom": "5"
   },
   "devDependencies": {
     "@capacitor/cli": "6.2.0",
@@ -41,10 +43,12 @@
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
+    "tailwindcss": "^3.4.17",
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
     "vite": "~5.2.0",
+    "vite-plugin-svgr": "^4.3.0",
     "vitest": "^0.34.6"
   },
-  "description": "An Ionic project"
+  "description": "DoorApp - Final year project"
 }
