--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
     "@capacitor/status-bar": "6.0.2",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "5",
+    "@ionic/storage": "^4.0.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "classnames": "^2.5.1",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "5"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "5",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@capacitor/cli": "6.2.0",
